dataset1235/2025-2/2947369575/users/3324069804/executions/1003782500_3455942218.log
== SUBMISSION (2025-08-27 22:26:22)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario = float(input("valor unitario do jogo:"))
disponivel= float(input("valor diposnivel para a aquisicao dos jogos:"))

# Calculo do valor a ser pago, incluindo o frete:
total = unitario*8
saldo = disponivel-total

# Impressao do valor total e do saldo:
print(round(total, 1)
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:26:47)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario = float(input("valor unitario do jogo:"))
disponivel= float(input("valor diposnivel para a aquisicao dos jogos:"))

# Calculo do valor a ser pago, incluindo o frete:
total = unitario*8+45
saldo = disponivel-total

# Impressao do valor total e do saldo:
print(round(total, 1)
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:26:21)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario = float(input("valor unitario do jogo:"))
disponivel= float(input("valor diposnivel para a aquisicao dos jogos:"))

# Calculo do valor a ser pago, incluindo o frete:
total = unitario*8
saldo = disponivel-total

# Impressao do valor total e do saldo:
print(round(total, 1)
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:27:43)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario = float(input("valor unitario do jogo:"))
disponivel= float(input("valor diposnivel para a aquisicao dos jogos:"))

# Calculo do valor a ser pago, incluindo o frete:
total = unitario*8+45
saldo = disponivel-total

# Impressao do valor total e do saldo:
print(round(total, 1))
print(round(saldo, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:26:48)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario = float(input("valor unitario do jogo:"))
disponivel= float(input("valor diposnivel para a aquisicao dos jogos:"))

# Calculo do valor a ser pago, incluindo o frete:
total = unitario*8+45
saldo = disponivel-total

# Impressao do valor total e do saldo:
print(round(total, 1)
print(round(saldo, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 13
    print(round(total, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
